# argos

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  config.toml.example  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: build.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  release.yml  test.yml
alembic/: env.py
alembic/versions/: 16778301d264_feed_score_index_desc_nulls_last.py  337debaadf4a_add_published_at_to_tech_items.py  4ac05a69769b_add_tech_items_feed_score.py  4cc3362552c4_add_crawl_queue_staging_table.py  5777c234802b_add_tech_items_digest.py  64ffd26e3c14_add_feed_events_table.py  66d2a7141756_rename_enum_labels_to_pascalcase_to_.py  67fb6c84eccc_add_summary_column_to_tech_items.py  997853887d46_shrink_tech_items_embedding_to_768_dims_.py  9be364737d2a_add_briefed_at_to_tech_items.py  a1b2c3d4e5f6_unique_user_assets_tech_id.py  b2bf64f7113d_add_trust_rubric_and_corroboration_.py  c4f1a8e9b2d0_add_image_url_to_tech_items_and_crawl_queue.py  de47078f87d5_initial_schema.py
docs/benchmarks/: genealogist-quantized.md
docs/design/: argos-web-pwa-logo-marks.html  argos-web-pwa-mockup.html
scripts/: backfill_clean_titles.py  benchmark_genealogist_quantized.py  cleanup_test_ghost_rows.sql  linear_snapshot.py
src/argos/: backup.py  cli.py  config.py  config_store.py  database.py  doctor.py  main.py  progress.py  scheduler.py  status.py
tests/: CLAUDE.md  conftest.py  test_backup.py  test_cli.py  test_cli_add.py  test_cli_backfill_digests.py  test_cli_backfill_images.py  test_cli_backfill_images_db.py  test_cli_backfill_trust.py  test_cli_backup.py  test_cli_is_favicon.py  test_cli_portfolio.py  test_cli_run_logging.py  test_cli_search.py  test_cli_stats.py  test_config.py  test_config_cli.py  test_config_web.py  test_doctor.py  test_feed_ranking_config.py  test_models.py  test_ollama_down_regression.py  test_progress.py  test_run_progress.py  test_scheduler.py  test_status.py
tests/brain/: test_benchmark_genealogist.py  test_corroboration.py  test_digest_config.py  test_digest_node.py  test_embed_concurrency.py  test_feed_ranking.py  test_genealogist_config.py  test_graph_state.py  test_language.py  test_nodes.py  test_ollama_client.py  test_ollama_infra_error.py  test_pipeline.py  test_preflight.py  test_progress_callbacks.py  test_trust.py  test_weekly_report.py
tests/crawler/: conftest.py  test_add_url.py  test_arxiv_fetcher.py  test_dynamic_fetcher.py  test_html_utils.py  test_og_image.py  test_pipeline.py  test_pipeline_succession.py  test_robots.py  test_rss_fetcher.py  test_spa_fetcher.py  test_static_fetcher.py
tests/init_wizard/: conftest.py  test_env_file.py  test_prompts.py  test_runners.py  test_wizard.py
tests/services/: test_search.py
tests/slack/: conftest.py  test_add_handler.py  test_asset_transition.py  test_blocks.py  test_briefing.py  test_briefing_query.py  test_handlers.py  test_succession_alerts.py  test_succession_pair_dedup_e2e.py  test_track_check.py  test_track_check_dispatch.py  test_track_check_match_signals.py  test_track_check_signal_match_e2e.py
tests/web/: conftest.py  test_actions_integration.py  test_actions_route.py  test_app.py  test_base_template.py  test_cli_web.py  test_detail_trust.py  test_error_page.py  test_events_route.py  test_favicon_render.py  test_feed_poll_route.py  test_feed_route.py  test_handoff_route.py  test_item_detail_genealogy.py  test_item_detail_history.py  test_item_detail_new_signals.py  test_item_detail_route.py  test_item_detail_similarity.py  test_item_detail_timeline.py  test_portfolio_route.py  test_portfolio_timeline_route.py  test_pwa.py  test_refresh_assets.py  (+2 more)
(+129 files in other folders)
