[project]
name = "argos-scout"
version = "0.2.0"
description = "Omni-Lens: Tech Scout - AI 기술 동향 자동 추적 슬랙봇"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
keywords = ["slack", "ai", "trend-tracking", "llm", "crawler", "pgvector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "playwright>=1.44",
    "readability-lxml>=0.8.1",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "slack-bolt>=1.18",
    "aiohttp>=3.9",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "questionary>=2.0",
    "feedparser>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/james20140802/argos"
Repository = "https://github.com/james20140802/argos"
Issues = "https://github.com/james20140802/argos/issues"
Changelog = "https://github.com/james20140802/argos/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
argos = "argos.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
